--- a/road-well-travelled.html
+++ b/road-well-travelled.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Exit Interview: Hunter Harrison | Report On Business</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="css/styles.css" rel="stylesheet" />
+	<link href="css/normalize.css" rel="stylesheet" />
 </head>
 <body>
 	<div id="container">
